src/objects/tdc_tsw__Message_Url__c.object
<CustomObject>
    <fields>
        <fullName>tdc_tsw__Clicks__c</fullName>
        <label>Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__First_Click__c</fullName>
        <label>First Click</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__First_Click_tz__c</fullName>
        <label>First Click</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Last_Click__c</fullName>
        <label>Last Click</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Last_Click_tz__c</fullName>
        <label>Last Click</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__MessageId__c</fullName>
        <label>MessageId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Related_Object_Id__c</fullName>
        <formula>tdc_tsw__SMS_History__r.tdc_tsw__Related_Object_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Object Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Related_Object__c</fullName>
        <formula>tdc_tsw__SMS_History__r.tdc_tsw__Related_Object__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__SMS_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SMS History</label>
        <referenceTo>tdc_tsw__Message__c</referenceTo>
        <relationshipLabel>Message Urls</relationshipLabel>
        <relationshipName>Message_Urls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Sender_Name__c</fullName>
        <formula>tdc_tsw__SMS_History__r.tdc_tsw__Sender_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sender Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__TimeStamp__c</fullName>
        <label>TimeStamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__UrlLink__c</fullName>
        <label>UrlLink</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Url__c</fullName>
        <label>Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Message Url</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Message Url Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Message Urls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>